# QAGURU_hw_6.19

./: pyproject.toml
