[tool.poetry]
name = "the_great_poetry_project"
version = "0.1.0"
description = ""
authors = ["Katrin Torsunova <tester@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "^1.0.2"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
